# homelab-esp32-devices

./: .gitignore  LLM_GENERATED_README.md  flake.nix
common/: CMakeLists.txt
common/include/: neopixel.h  openthread_manager.h  wifi_manager.h
common/src/: neopixel.c  openthread_manager.c  wifi_manager.c
components/ha_client/: CMakeLists.txt
components/ha_client/include/: ha_client.h
components/ha_client/src/: ha_client.c
components/neopixel/: CMakeLists.txt
components/openthread_manager/: CMakeLists.txt
components/openthread_manager/src/: openthread_manager.c
components/wifi_manager/: CMakeLists.txt
devices/freezer-temp-sensor/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
devices/freezer-temp-sensor/cmake/: generate_secrets.cmake
devices/freezer-temp-sensor/main/: CHIPProjectConfig.h  CMakeLists.txt  Kconfig.projbuild  ds18b20_reader.c  ds18b20_reader.h  fake_temp_sensor.c  fake_temp_sensor.h  idf_component.yml  main.c  main.cpp
devices/freezer-temp-sensor/main/certs/: ca_bundle.pem
devices/freezer-temp-sensor/scripts/: decrypt_secrets.sh
devices/freezer-temp-sensor/secrets/: thread_auth.sops.yaml
devices/garage-opener/: CMakeLists.txt  sdkconfig.defaults
devices/garage-opener/main/: CMakeLists.txt  main.c
devices/garage-opener/main/certs/: ca_bundle.pem
devices/garage-opener/secrets/: garage.sops.yaml
docs/: debugger-bring-up.md  esp-prog-2.md  flash-script.md  flashing-workarounds.md  freezer-temp-sensor.md  nix-build.md  testing.md
scripts/: flash.py  update-components-hash.py
tests/: CMakeLists.txt  run_all.sh  test_build.sh  test_build_freezer.sh  test_ds18b20_reader.c  test_fake_temp_sensor.c  test_ha_client.c  test_main.c  test_neopixel.c  test_openthread_manager.c  test_runner.c  test_wifi_manager.c
tests/mocks/: ds18b20.h  ds18b20_mocks.c  esp_idf_mocks.h  esp_openthread_netif_glue.h  esp_vfs_eventfd.h  http_mocks.c  led_strip.h  neopixel_mocks.c  onewire_bus.h  openthread_mocks.c  openthread_mocks.h  system_mocks.c  test_helpers.h  wifi_mocks.c
tests/mocks/freertos/: task.h
tests/mocks/openthread/: thread.h
